agregado de registrar y editar en precesos de modulo seguimiento y agregado de bordes en pdf div

--- a/src/app/pages/processes/components/authorization-register/action-request-authorization/action-request-authorization.component.html
+++ b/src/app/pages/processes/components/authorization-register/action-request-authorization/action-request-authorization.component.html
@@ -6,21 +6,23 @@
             <input matInput formControlName="correlative" type="number">
         </mat-form-field>
 
-        <app-datepicker-year (onGetValue)="getYear($event)" [width]="'100'"></app-datepicker-year>
+        <app-datepicker-year (onGetValue)="getYear($event)" [width]="'100'"
+        [dateYear]="dateYear"
+        [changeCount]="changeCountYear"></app-datepicker-year>
     </div>
 
 
     <mat-form-field appearance="outline">
         <mat-label>Fuente</mat-label>
-        <mat-select formControlName="font">
-          <mat-option *ngFor="let font of fonts" [value]="font.id">{{font.name}}</mat-option>
+        <mat-select formControlName="source">
+          <mat-option *ngFor="let font of fonts" [value]="font.name">{{font.name}}</mat-option>
         </mat-select>
       </mat-form-field>
 
       <mat-form-field appearance="outline">
         <mat-label>Tipo</mat-label>
         <mat-select formControlName="type">
-          <mat-option *ngFor="let type of types" [value]="type.id">{{type.name}}</mat-option>
+          <mat-option *ngFor="let type of types" [value]="type.name">{{type.name}}</mat-option>
         </mat-select>
       </mat-form-field>
 
@@ -36,12 +38,14 @@
 
     <mat-form-field appearance="outline">
         <mat-label>Unidad Operativa</mat-label>
-        <input matInput placeholder="Unidad operativa" formControlName="area">
-    </mat-form-field>
+        <mat-select formControlName="area">
+          <mat-option *ngFor="let area of areas" [value]="area.name">{{area.name}}</mat-option>
+        </mat-select>
+      </mat-form-field>
 
     <mat-form-field appearance="outline">
         <mat-label>Fecha de Emisión</mat-label>
-        <input matInput [matDatepicker]="pickerEmision" formControlName="date">
+        <input matInput [matDatepicker]="pickerEmision" formControlName="dateIssue">
         <mat-datepicker-toggle matSuffix [for]="pickerEmision"></mat-datepicker-toggle>
         <mat-datepicker #pickerEmision></mat-datepicker>
     </mat-form-field>
@@ -71,7 +75,7 @@
     <mat-form-field appearance="outline">
         <mat-label>Responsable UO</mat-label>
         <mat-select formControlName="responsibleUO">
-          <mat-option *ngFor="let responsible of responsibles" [value]="responsible.id">{{responsible.name}}</mat-option>
+          <mat-option *ngFor="let responsible of responsibles" [value]="responsible.name">{{responsible.name}}</mat-option>
         </mat-select>
       </mat-form-field>
 
