--- a/src/app/pages/processes/components/record-findings/action-request/action-request.component.html
+++ b/src/app/pages/processes/components/record-findings/action-request/action-request.component.html
@@ -6,26 +6,28 @@
             <input matInput formControlName="correlative" type="number">
         </mat-form-field>
 
-        <app-datepicker-year (onGetValue)="getYear($event)" [width]="'100'"></app-datepicker-year>
+        <app-datepicker-year (onGetValue)="getYear($event)" [width]="'100'" 
+                             [dateYear]="dateYear"
+                             [changeCount]="changeCountYear"></app-datepicker-year>
     </div>
 
 
     <mat-form-field appearance="outline">
         <mat-label>Fuente</mat-label>
-        <mat-select formControlName="font">
-          <mat-option *ngFor="let font of fonts" [value]="font.id">{{font.name}}</mat-option>
+        <mat-select formControlName="source">
+          <mat-option *ngFor="let font of fonts" [value]="font.name">{{font.name}}</mat-option>
         </mat-select>
       </mat-form-field>
 
       <mat-form-field appearance="outline">
         <mat-label>Tipo</mat-label>
         <mat-select formControlName="type">
-          <mat-option *ngFor="let type of types" [value]="type.id">{{type.name}}</mat-option>
+          <mat-option *ngFor="let type of types" [value]="type.name">{{type.name}}</mat-option>
         </mat-select>
       </mat-form-field>
 
       <mat-form-field appearance="outline">
-        <mat-label>Requerimiento ISO 9001</mat-label>
+        <mat-label>Requisito ISO 9001</mat-label>
         <input matInput placeholder="Requerimiento" formControlName="requirement">
     </mat-form-field>
 
@@ -41,7 +43,7 @@
 
     <mat-form-field appearance="outline">
         <mat-label>Fecha de Emisión</mat-label>
-        <input matInput [matDatepicker]="pickerEmision" formControlName="date">
+        <input matInput [matDatepicker]="pickerEmision" formControlName="dateIssue">
         <mat-datepicker-toggle matSuffix [for]="pickerEmision"></mat-datepicker-toggle>
         <mat-datepicker #pickerEmision></mat-datepicker>
     </mat-form-field>
@@ -71,7 +73,7 @@
     <mat-form-field appearance="outline">
         <mat-label>Responsable UO</mat-label>
         <mat-select formControlName="responsibleUO">
-          <mat-option *ngFor="let responsible of responsibles" [value]="responsible.id">{{responsible.name}}</mat-option>
+          <mat-option *ngFor="let responsible of responsibles" [value]="responsible.name">{{responsible.name}}</mat-option>
         </mat-select>
       </mat-form-field>
 
