--- a/src/app/pages/processes/components/share-register/share-register.component.html
+++ b/src/app/pages/processes/components/share-register/share-register.component.html
@@ -1,13 +1,17 @@
 <div class="container-title">Registro de Acciones</div>
-<mat-tab-group class="mat-tab-sunarp" [(selectedIndex)]="indexTab">
+<mat-tab-group class="mat-tab-sunarp" [(selectedIndex)]="indexTab" (selectedTabChange)="onTabChanged($event)">
     <mat-tab label="Listado de Acciones">
         <div class="cont-p">
-            <app-list-actions-share (onNext)="changeTab($event)"></app-list-actions-share>
+            <app-list-actions-share (onNext)="changeTab($event)" (onSelectRow)="getRow($event)"></app-list-actions-share>
         </div>
     </mat-tab>
     <mat-tab label="Solicitud de Acción">
         <div class="cont-p">
-            <app-action-request-share (onNext)="changeTab($event)"></app-action-request-share>
+            <app-action-request-share (onNext)="changeTab($event)"
+            [listShare]="listShare"
+            [changeCount]="changecount"
+            (onSave)="saveShare($event)" 
+            ></app-action-request-share>
         </div>
     </mat-tab>
     <mat-tab label="Registro del Plan de Acción" [disabled]="!totalTabs.includes(2)">
