--- a/src/app/pages/processes/components/authorization-register/authorization-register.component.html
+++ b/src/app/pages/processes/components/authorization-register/authorization-register.component.html
@@ -1,13 +1,17 @@
 <div class="container-title">Registro de Autorizaciones</div>
-<mat-tab-group class="mat-tab-sunarp" [(selectedIndex)]="indexTab">
+<mat-tab-group class="mat-tab-sunarp" [(selectedIndex)]="indexTab" (selectedTabChange)="onTabChanged($event)">
     <mat-tab label="Listado de Acciones">
         <div class="cont-p">
-            <app-list-actions-authorization (onNext)="changeTab($event)"></app-list-actions-authorization>
+            <app-list-actions-authorization (onNext)="changeTab($event)" (onSelectRow)="getRow($event)"></app-list-actions-authorization>
         </div>
     </mat-tab>
     <mat-tab label="Solicitud de Acción" [disabled]="false">
         <div class="cont-p">
-            <app-action-request-authorization (onNext)="changeTab($event)"></app-action-request-authorization>
+            <app-action-request-authorization (onNext)="changeTab($event)"
+                                              [listAuthorization]="listAuthorization"
+                                              [changeCount]="changecount"
+                                              (onSave)="saveAuthorization($event)" 
+            ></app-action-request-authorization>
         </div>
     </mat-tab>
     <mat-tab label="Registro del Plan de Acción" [disabled]="!totalTabs.includes(2)">
