agregado de funcion de boto siguiente

--- a/src/app/pages/processes/components/authorization-register/action-request-authorization/action-request-authorization.component.html
+++ b/src/app/pages/processes/components/authorization-register/action-request-authorization/action-request-authorization.component.html
@@ -84,6 +84,6 @@
         <mat-checkbox  formControlName="return" [color]="'primary'" [labelPosition]="'before'">Devolver</mat-checkbox>
     </div>
     <div class="container-btn-save">
-        <button (click)="next()" type="button" [disabled]="!formActionRequestAuthorization.valid">Siguiente</button>
+        <button (click)="next()" type="button" [disabled]="nextDisabled">Siguiente</button>
     </div>
 </form>
