--- a/src/app/pages/processes/components/share-register/action-request-share/action-request-share.component.html
+++ b/src/app/pages/processes/components/share-register/action-request-share/action-request-share.component.html
@@ -84,6 +84,6 @@
     </div>
 
     <div class="container-btn-save">
-        <button (click)="next()" type="button" [disabled]="!formActionRequestShare.valid">Siguiente</button>
+        <button (click)="next()" type="button" [disabled]="nextDisabled">Siguiente</button>
     </div>
 </form>
