--- a/src/app/pages/processes/components/authorization-register/authorization-register.component.html
+++ b/src/app/pages/processes/components/authorization-register/authorization-register.component.html
@@ -2,7 +2,10 @@
 <mat-tab-group class="mat-tab-sunarp" [(selectedIndex)]="indexTab" (selectedTabChange)="onTabChanged($event)">
     <mat-tab label="Listado de Acciones">
         <div class="cont-p">
-            <app-list-actions-authorization (onNext)="changeTab($event)" (onSelectRow)="getRow($event)"></app-list-actions-authorization>
+            <app-list-actions-authorization (onNext)="changeTab($event)" 
+                                            (onSelectRow)="getRow($event)"
+                                            (onNextDisabled)="onNextdisabled($event)">
+            </app-list-actions-authorization>
         </div>
     </mat-tab>
     <mat-tab label="Solicitud de Acción" [disabled]="false">
@@ -10,7 +13,8 @@
             <app-action-request-authorization (onNext)="changeTab($event)"
                                               [listAuthorization]="listAuthorization"
                                               [changeCount]="changecount"
-                                              (onSave)="saveAuthorization($event)" 
+                                              (onSave)="saveAuthorization($event)"
+                                              [nextDisabled]="nextDisabled"  
             ></app-action-request-authorization>
         </div>
     </mat-tab>
