--- a/src/app/shared/components/modal-login/modal-login.component.html
+++ b/src/app/shared/components/modal-login/modal-login.component.html
@@ -9,7 +9,7 @@
                 </mat-form-field>
                 <mat-form-field appearance="fill">
                     <mat-label>Clave</mat-label>
-                    <input matInput placeholder="Clave" type="password" formControlName="pass">
+                    <input matInput placeholder="Clave" type="password" formControlName="password">
                 </mat-form-field>
             </form>
             <button class="btn-ingresar" (click)="ingresar()" [disabled]="!formLogin.valid">Ingresar</button>
