--- a/src/app/pages/documented-information/components/documented-details/documented-details.component.scss
+++ b/src/app/pages/documented-information/components/documented-details/documented-details.component.scss
@@ -12,6 +12,11 @@
     }
 }
 
+.tb-doc-cont{
+    min-height: 866px;
+    background-color: #ffffff;
+}
+
 .cont-doc-row {
     display: flex;
     gap    : 10px;
