--- a/src/app/pages/documented-information/components/documented/documented.component.scss
+++ b/src/app/pages/documented-information/components/documented/documented.component.scss
@@ -86,3 +86,19 @@
 .dlp-none{
     display: none;
 }
+
+.header-mat-tree{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.btn-edit-doc{
+    background-color: #58babb;
+    color: #ffffff;
+    border: none;
+    padding: 5px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
