--- a/src/app/pages/documented-information/components/documented-details/documented-details.component.html
+++ b/src/app/pages/documented-information/components/documented-details/documented-details.component.html
@@ -1,3 +1,4 @@
+<button (click)="goEdit()" class="btn-edit-doc" *ngIf="userLog?.roles.includes('Editor')">Editar</button>
 <div class="container-responsible-table tb-doc-cont" #tbdocdetail>
     <table mat-table [dataSource]="dataSource" class="table-standart tbdoc-detail">
         <ng-container matColumnDef="generalProcedures">
