--- a/src/app/pages/documented-information/components/edit-document/edit-document.component.scss
+++ b/src/app/pages/documented-information/components/edit-document/edit-document.component.scss
@@ -7,6 +7,12 @@
     text-decoration: underline;
 }
 
+.cont-actions-edit-doc{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
 .btn-new-doc{
     background-color: #58babb;
     color: #ffffff;
